--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
 <html>
+<!DOCTYPE html>
+<html lang="en">
+<!--DISCLAIMER: if you are looking at the source code you are no fun, and you are a buzzkill peice of crap.-->	<body style="background-color:lightgrey;">
+<head>
+  <title>00GA</title>
+</head>
+<body>
+  <style type="text/css">
+		body {
+			background-color: aqua;
+			transition: background-color 5s;
+		}
+	</style>
+</head>
+<body>
+	<script type="text/javascript">
+		var colors = ["orange", "aqua"]
+		
+		var i = 1;
+
+		window.setInterval(function(){
+			document.body.style.backgroundColor = colors[i];
+			i++;
+			if (i === colors.length){
+				i=0;
+			}
+		}, 5000);
+	</script>
+  <h1> DIlDIUM WEBSITE </h1>
+  <br>
+  <br>
+  <br>
+  <hr>
+  <h3> description of dildium </h3>
+  <p> Bruh, dildium is the best currency ever, screw dogecoin. Dogecoin? more like bitchcoin. <br>
+  bruh but the thing is like i HATE all other currencies. bitcoin sucks, dogecoin sucks, lytecoint ucks sae<br>
+  but literally, but some, OH YEAH ITS FREE!!! for now. get some quick, or should i say... click?<br>
+  Bruh but like maybe get some, you can save how much u have soon; the tech monkeys at D coin HQ have not figured out how to make<br>
+  that work. so yeah, we will soon... see ya. <br>
+    <hr>
+  <br>
+  <br>
+  <br>
