--- a/index.html
+++ b/index.html
@@ -42,3 +42,8 @@
   <br>
   <br>
   <br>
+	<h3> pic of dildium </h3>
+	<picture>
+  <source media="(min-width:650px)" srcset="ooga_booga-removebg-preview.png">
+	</picture>
+	<p> best image is the best </p>
