--- a/index.html
+++ b/index.html
@@ -1,32 +1,22 @@
-<html>
 <!DOCTYPE html>
+<html>
 <html lang="en">
-<!--DISCLAIMER: if you are looking at the source code you are no fun, and you are a buzzkill peice of crap.-->	<body style="background-color:lightgrey;">
+<!--Stop looking at the source code dumb-->
 <head>
   <title>00GA</title>
-</head>
-<body>
-  <style type="text/css">
-		body {
-			background-color: aqua;
-			transition: background-color 5s;
-		}
+	<style>
+		p {color:white}
+		h1 {color:white}
+		h2 {color:white}
+		h3 {color:white}
+		h4 {color:white}
+		h5 {color:white}
+		h6 {color:white}
+		body {background-color:#2e2e2d;}
+		body {font-family:'georgia', serif}
 	</style>
 </head>
 <body>
-	<script type="text/javascript">
-		var colors = ["orange", "aqua"]
-		
-		var i = 1;
-
-		window.setInterval(function(){
-			document.body.style.backgroundColor = colors[i];
-			i++;
-			if (i === colors.length){
-				i=0;
-			}
-		}, 5000);
-	</script>
   <h1> DIlDIUM WEBSITE </h1>
   <br>
   <br>
@@ -42,8 +32,3 @@
   <br>
   <br>
   <br>
-	<h3> pic of dildium </h3>
-	<picture>
-  <source media="(min-width:650px)" srcset="ooga_booga-removebg-preview.png">
-	</picture>
-	<p> best image is the best </p>
