--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <!--Stop looking at the source code dumb-->
 <head>
-  <title>00GA</title>
+  <title>D COIN</title>
 	<style>
 		p {color:white}
 		h1 {color:white}
