--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <!--Stop looking at the source code dumb-->
 <head>
-  <title>D COIN</title>
+  <title>00GA</title>
 	<style>
 		p {color:white}
 		h1 {color:white}
@@ -20,6 +20,8 @@
   <h1> DIlDIUM WEBSITE </h1>
   <br>
   <br>
+	<picture>
+  <source media="(min-width:650px)" srcset="ooga_booga-removebg-preview.png">
   <br>
   <hr>
   <h3> description of dildium </h3>
