--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <br>
 	<picture>
   <source media="(min-width:650px)" srcset="ooga_booga-removebg-preview.png">
+	</picture>
   <br>
   <hr>
   <h3> description of dildium </h3>
