--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <br>
 	<picture>
   <source media="(min-width:650px)" srcset="ooga_booga-removebg-preview.png">
+		 <img src="ooga_booga-removebg-preview.png" alt="(;" style="width:auto;">
 	</picture>
   <br>
   <hr>
