--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   Bruh but like maybe get some, you can save how much u have soon; the tech monkeys at D coin HQ have not figured out how to make<br>
   that work. so yeah, we will soon... see ya. <br>
     <hr>
+	<a href='DC994.github.io'> <img src='reddit-logo.png' width=100 length=100> </a>
+	</body>
   <br>
   <br>
   <br>
