--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <!--Stop looking at the source code dumb-->
 <head>
-  <title>00GA</title>
+  <title>Dildium Official Website</title>
 	<style>
 		p {color:white}
 		h1 {color:white}
@@ -27,14 +27,12 @@
   <br>
   <hr>
   <h3> description of dildium </h3>
-  <p> Bruh, dildium is the best currency ever, screw dogecoin. Dogecoin? more like bitchcoin. <br>
-  bruh but the thing is like i HATE all other currencies. bitcoin sucks, dogecoin sucks, lytecoint ucks sae<br>
-  but literally, but some, OH YEAH ITS FREE!!! for now. get some quick, or should i say... click?<br>
-  Bruh but like maybe get some, you can save how much u have soon; the tech monkeys at D coin HQ have not figured out how to make<br>
-  that work. so yeah, we will soon... see ya. <br>
+	<p> Dildium is the best cryptocurrency ever! What the heck is a <b> Doge Coin </b>? More like stupid coin. <br> Dildium will be released... sometime in the future I guess. <br> To download the <b> Dildium Miner </b> click <a href='download.html'>here</a></p>
     <hr>
-	<a href='DC994.github.io'> <img src='reddit-logo.png' width=100 length=100> </a>
-	</body>
-  <br>
-  <br>
-  <br>
+	<br>
+	<br>
+	<br>
+	<hr>
+	<p><b>socials</b></p>
+	<a href='DC994.github.io'> <img src='reddit-logo.png' width=50 length=50> </a> <a href='DC994.github.io'> <img src='twitter-logo.png' width=50 length=50> </a> 
+	</body> 
