--- a/index.html
+++ b/index.html
@@ -20,14 +20,11 @@
   <h1> DIlDIUM WEBSITE </h1>
   <br>
   <br>
-	<picture>
-  <source media="(min-width:650px)" srcset="ooga_booga-removebg-preview.png">
-		 <img src="ooga_booga-removebg-preview.png" alt="(;" style="width:auto;">
-	</picture>
   <br>
   <hr>
   <h3> description of dildium </h3>
-	<p> Dildium is the best cryptocurrency ever! What the heck is a <b> Doge Coin </b>? More like stupid coin. <br> Dildium will be released... sometime in the future I guess. <br> To download the <b> Dildium Miner </b> click <a href='download.html'>here</a></p>
+	<p> Dildium is the best cryptocurrency ever! What the heck is a <b> Doge Coin </b>? More like stupid coin. Dildium will be released... sometime in the future I guess. <br> To download the <b> Dildium Miner </b> click <a href='download.html'>here.</a>
+		Click <a href='forum.html'>here</a> to open the Dildium official forum.
     <hr>
 	<br>
 	<br>
