--- a/download.html
+++ b/download.html
@@ -22,5 +22,5 @@
   <br>
   <br>
   <hr>
-  <p> Our tech monkeys are trying their hardest to get the miner completed. Check back later for more info. </p>
+	<a href='https://github.com/ollonis/Dildium/'> here </a>
   </body>
